--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+   "engines": {
+    "node": "14.x"
+   },
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,5 +21,8 @@
     "razorpay": "^2.9.3",
     "shortid": "^2.2.16",
     "uuid": "^9.0.1"
-  }
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "description": ""
 }
